# ROS_tutorial

tp1_tutorial/: CMakeLists.txt  package.xml
tp1_tutorial/include/: tp1_tutorial_node.h
tp1_tutorial/src/: tp1_tutorial_node.cpp
tp2_tutorial/heron_sim/: CMakeLists.txt  package.xml
tp2_tutorial/heron_sim/launch/: empty_world.launch  heron_sim.launch  spawn_urdf_model.launch
tp2_tutorial/heron_sim/models/heron/: heron.urdf.xacro  heron_gazebo.xacro  heron_plugins.urdf.xacro
tp2_tutorial/heron_sim/models/heron/actuators/thruster_layout/: engine.xacro  gazebo_thrust_plugin.xacro
tp2_tutorial/heron_sim/models/heron/sensors/hokuyo_description/: hokuyo.urdf.xacro
tp2_tutorial/heron_sim/models/heron/sensors/mynteye_description/: mynteye.urdf.xacro
tp2_tutorial/sim_gazebo/uuv_simulator/uuv_sensor_plugins/uuv_sensor_ros_plugins/urdf/: sonar_snippets.xacro
tp2_tutorial/sim_gazebo/vmrc_gazebo/: CMakeLists.txt  package.xml
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/aurora/: model.config  model.sdf
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018L/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018S/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018T/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018U/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018Y/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018_baseL/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018_baseS/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018_baseT/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018_baseU/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/dock_2018_baseY/: model.config  model.sdf  model.sdf.erb
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/green_totem/: model.sdf
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/ocean/: model.sdf
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/ocean/materials/scripts/: ocean.material
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/ocean_atlantic/: model.config  model.sdf
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/robotx_dock_u/: model.config  model.sdf
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/robotx_dock_u/meshes/: dockU.dae
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/unit_box/: model.config  model.sdf
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/unit_box/mesh/: unit_box.stl
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/windturbine/: model.config  model.sdf
tp2_tutorial/sim_gazebo/vmrc_gazebo/models/windturbine/mesh/: jacketK.stl  windturbine.stl
tp2_tutorial/sim_gazebo/vmrc_gazebo/src/: gazebo_ros_color.cc
tp2_tutorial/sim_gazebo/vmrc_gazebo/worlds/: dev.world.xacro  example_course.world.xacro  sandisland.xacro
tp2_tutorial/sim_gazebo/wamv_gazebo/urdf/dynamics/: wamv_gazebo_dynamics_plugin.xacro  wamv_gazebo_wind_plugin.xacro
tp2_tutorial/utils_sim/: CMakeLists.txt  package.xml
tp2_tutorial/utils_sim/include/: gazebo2odom.h  lidar_nearest.h  lin_vel_control.h
tp2_tutorial/utils_sim/src/: gazebo2odom.cpp  lidar_nearest.cpp  lin_vel_control.cpp
