<?xml version="1.0"?>

<package>
  <name>tp1_tutorial</name>
  <version>0.0.1</version>
  <description>The TP1 tutorial package</description>

  <author email="daniel.f.campos@inesctec.pt">Daniel Campos</author> 
  <maintainer email="daniel.f.campos@inesctec.pt">Daniel Campos</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
